inital server structure

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Web API for OkCollege",
   "main": "app.js",
   "scripts": {
+    "build": "babel src -d lib",
+    "start": "node ./lib/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -11,12 +13,20 @@
     "url": "git+https://github.com/rpiml/okcollege-web-api.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/rpiml/okcollege-web-api/issues"
   },
   "homepage": "https://github.com/rpiml/okcollege-web-api#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "lodash": "^4.15.0",
+    "morgan": "^1.7.0",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.14.0",
+    "babel-preset-es2015": "^6.14.0"
   }
 }
