--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-es2015": "^6.14.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
-    "mocha": "^3.0.2"
+    "mocha": "^3.0.2",
+    "should": "^11.1.0"
   }
 }
