--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.15.0",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
+    "pg": "^6.1.0",
     "supertest": "^2.0.0"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "babel-preset-es2015": "^6.14.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
+    "expect": "^1.20.2",
     "mocha": "^3.0.2",
     "should": "^11.1.0"
   }
