--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "app.js",
   "scripts": {
     "build": "babel src -d lib",
-    "start": "nodemon ./lib/index.js",
-    "test": "./node_modules/.bin/mocha --compilers js:babel-core/register 'src/**/*.integration.js'"
+    "start": "nodemon --ignore lib --exec npm run build -- ./lib/index.js",
+    "test": "./node_modules/.bin/mocha --compilers js:babel-core/register 'src/**/*.integration.js'",
+    "test-watch": "nodemon --exec ./node_modules/.bin/mocha --compilers js:babel-core/register 'src/**/*.integration.js'"
   },
   "repository": {
     "type": "git",
@@ -30,7 +31,9 @@
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
+    "babel-plugin-transform-flow-strip-types": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-0": "^6.16.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "expect": "^1.20.2",
