--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["es2015", "stage-0"],
-  "plugins": ["transform-flow-strip-types"]
+  "plugins": ["transform-async-to-generator", "transform-flow-strip-types"]
 }
