--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "expect": "^1.20.2",
     "mocha": "^3.0.2",
     "nodemon": "^1.11.0",
-    "should": "^11.1.0"
+    "should": "^11.1.0",
+    "supertest": "^2.0.1"
   }
 }
