initialize database command

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "build": "babel src -d lib",
+    "init": "node ./lib/db/init.js",
     "start": "nodemon --ignore lib --exec \"npm run build && npm run serve\"",
     "serve": "node ./lib/index.js",
     "test": "./node_modules/.bin/mocha --compilers js:babel-core/register 'src/**/*.integration.js'",
