--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "babel-plugin-transform-async-to-generator": "^6.16.0",
     "babel-polyfill": "^6.16.0",
     "body-parser": "^1.15.2",
+    "composable-middleware": "^0.3.0",
     "crypto": "0.0.3",
     "express": "^4.14.0",
+    "express-jwt": "^5.1.0",
+    "jsonwebtoken": "^7.1.9",
     "lodash": "^4.15.0",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
