--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 sudo: required
 
-language: node
+language: node_js
+node_js:
+  - "6.5"
 
-services:
-  - docker
+addons:
+  postgresql: "9.4"
 
-before_install:
-- docker run --net host postgres
-- docker run --net host node:6.5.0 /bin/bash -c "cd /usr/src/app && npm install && npm run build && npm test"
-- docker ps -a
+before_script:
+  - psql -c 'create database okcollege_dev;' -U postgres
+  - wget https://raw.githubusercontent.com/rpiml/okcollege-dev/master/assets/form.json -P ./assets
+
+script:
+- npm test
