--- a/package.json
+++ b/package.json
@@ -25,14 +25,20 @@
     "body-parser": "^1.15.2",
     "composable-middleware": "^0.3.0",
     "crypto": "0.0.3",
+    "del": "^2.2.2",
     "express": "^4.14.0",
     "express-jwt": "^5.1.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-mocha": "^3.0.1",
+    "gulp-plumber": "^1.1.0",
     "jsonwebtoken": "^7.1.9",
     "lodash": "^4.15.0",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "path-exists": "^3.0.0",
     "pg": "^6.1.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.24.4",
