--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Web API for OkCollege",
   "main": "app.js",
   "scripts": {
-    "build": "babel src -d lib",
-    "start": "nodemon --ignore lib --exec npm run build -- ./lib/index.js",
-    "test": "./node_modules/.bin/mocha --compilers js:babel-core/register 'src/**/*.integration.js'",
-    "test-watch": "nodemon --exec npm run test"
+    "build": "gulp build",
+    "start": "gulp main",
+    "test": "gulp test",
+    "test-watch": "gulp test:watch"
   },
   "repository": {
     "type": "git",
